fix de l'overflow et styles de base carrousel

--- a/themes/theme-ex2/sass/layouts/_no-sidebar.scss
+++ b/themes/theme-ex2/sass/layouts/_no-sidebar.scss
@@ -1,3 +1,7 @@
+body {
+	overflow-x: hidden;
+}
+
 .no-sidebar {
 
 	.site {
@@ -15,7 +19,7 @@
 	font-size: clamp(0.8rem, 1rem, 1.2rem,);
 	@include desktop {
 		margin-left: 5rem;
-		margin-right: 5rem;
+		margin-right: 5rem; // Sert à centrer le contenu de la page
 		font-size: clamp(1rem, 1.2rem, 1.4rem,);
 	}
 }
