--- a/themes/theme-ex2/style.css
+++ b/themes/theme-ex2/style.css
@@ -621,6 +621,10 @@ textarea {
 /*--------------------------------------------------------------
 # Layouts
 --------------------------------------------------------------*/
+body {
+  overflow-x: hidden;
+}
+
 .no-sidebar .site {
   display: grid;
   grid-template-columns: auto;
@@ -1032,7 +1036,7 @@ menu tablet
   margin-bottom: 1.5em;
 }
 
-/* Local
+/* Local/accueil
 --------------------------------------------- */
 body {
   width: 100vw;
@@ -1126,5 +1130,33 @@ body.home::after {
 
 .liste-cours section article a:hover {
   color: #756a08;
+}
+
+/* Local/carrousel
+--------------------------------------------- */
+.carrousel {
+  display: flex;
+  width: 300vw;
+  height: 20vh;
+}
+
+.carrousel div {
+  width: 88vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.carrousel div:nth-of-type(1) {
+  background-color: #aab399;
+  margin-right: 5rem;
+}
+
+.carrousel div:nth-of-type(2) {
+  background-color: #aab399;
+}
+
+.carrousel div:nth-of-type(3) {
+  background-color: #aab399;
 }
 /*# sourceMappingURL=style.css.map */
